--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <meta name="robots" content="index, follow">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 <title>HexMind Solutions</title>
+<link rel="icon" href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEimsq2vjv_p4zbn-7H_QemMua8EYBk5UfC6RidmQssWOgTkAMVyKBeTnsPOCdORh1i70Uqp45w0eb0HKQHPUOOgz-nf5Y7BQ41mDSwPfp4MEGStIebLs8Uy2dQjmnLAto2Ik3L6dsWNq-NDjfBmmPgcsV7jOhAZYYOn5NqqBt-59-w5kNRUY_GoM_DMOwjj/s1600/logo.png" type="image/x-icon">
+
     <style>
         :root {
             --primary-dark: #050810;
@@ -1015,6 +1017,200 @@
                 height: 380px;
             }
        }
+       /* 2026 Futuristic Glass-Scroll */
+::-webkit-scrollbar {
+  width: 14px;
+  height: 14px;
+}
+
+::-webkit-scrollbar-track {
+  background: 
+    linear-gradient(
+      180deg,
+      rgba(5, 8, 16, 0.95) 0%,
+      rgba(10, 15, 31, 0.85) 50%,
+      rgba(15, 21, 48, 0.9) 100%
+    ),
+    var(--scroll-glow);
+  backdrop-filter: blur(20px) saturate(200%);
+  -webkit-backdrop-filter: blur(20px) saturate(200%);
+  border-radius: 12px;
+  margin: 8px;
+  border: 1px solid rgba(0, 217, 255, 0.1);
+  box-shadow: 
+    inset 0 0 30px rgba(0, 0, 0, 0.5),
+    inset 0 1px 0 rgba(255, 255, 255, 0.08),
+    0 0 40px rgba(0, 217, 255, 0.05);
+  position: relative;
+  overflow: hidden;
+}
+
+/* Holographic Grid Pattern */
+::-webkit-scrollbar-track::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: 
+    linear-gradient(rgba(0, 217, 255, 0.03) 1px, transparent 1px),
+    linear-gradient(90deg, rgba(0, 217, 255, 0.03) 1px, transparent 1px);
+  background-size: 20px 20px;
+  mask-image: radial-gradient(circle at center, black 30%, transparent 70%);
+  -webkit-mask-image: radial-gradient(circle at center, black 30%, transparent 70%);
+  pointer-events: none;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--scroll-cyber);
+  backdrop-filter: blur(25px) brightness(1.2);
+  -webkit-backdrop-filter: blur(25px) brightness(1.2);
+  border-radius: 12px;
+  border: 1.5px solid rgba(255, 255, 255, 0.15);
+  transition: all 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
+  box-shadow: 
+    0 0 30px rgba(0, 217, 255, 0.4),
+    0 0 60px rgba(109, 40, 217, 0.3),
+    inset 0 1px 0 rgba(255, 255, 255, 0.25),
+    inset 0 -1px 0 rgba(0, 0, 0, 0.3);
+  position: relative;
+  overflow: hidden;
+}
+
+/* Liquid Metal Effect */
+::-webkit-scrollbar-thumb::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(
+    135deg,
+    transparent 0%,
+    rgba(255, 255, 255, 0.15) 25%,
+    rgba(255, 255, 255, 0.1) 50%,
+    rgba(255, 255, 255, 0.15) 75%,
+    transparent 100%
+  );
+  border-radius: 12px;
+  pointer-events: none;
+  animation: liquidFlow 4s infinite linear;
+}
+
+/* Energy Core */
+::-webkit-scrollbar-thumb::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 60%;
+  height: 60%;
+  background: radial-gradient(
+    circle at center,
+    rgba(0, 217, 255, 0.6) 0%,
+    rgba(109, 40, 217, 0.4) 50%,
+    transparent 70%
+  );
+  border-radius: 50%;
+  filter: blur(8px);
+  pointer-events: none;
+  animation: energyPulse 2s infinite alternate ease-in-out;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--scroll-cyber);
+  backdrop-filter: blur(30px) brightness(1.3);
+  -webkit-backdrop-filter: blur(30px) brightness(1.3);
+  border-color: rgba(0, 217, 255, 0.3);
+  box-shadow: 
+    0 0 40px rgba(0, 217, 255, 0.6),
+    0 0 80px rgba(109, 40, 217, 0.4),
+    0 0 120px rgba(6, 182, 212, 0.2),
+    inset 0 1px 0 rgba(255, 255, 255, 0.3),
+    inset 0 -1px 0 rgba(0, 0, 0, 0.2);
+  transform: scaleX(1.12);
+}
+
+::-webkit-scrollbar-thumb:active {
+  background: conic-gradient(
+    from 0deg at 50% 50%,
+    rgba(0, 230, 255, 0.9) 0deg,
+    rgba(129, 61, 245, 0.7) 120deg,
+    rgba(6, 200, 232, 0.9) 240deg,
+    rgba(0, 230, 255, 0.9) 360deg
+  );
+  animation: rotateGradient 1s linear infinite;
+}
+
+::-webkit-scrollbar-corner {
+  background: linear-gradient(
+    135deg,
+    rgba(5, 8, 16, 0.95) 0%,
+    rgba(10, 15, 31, 0.85) 100%
+  );
+  backdrop-filter: blur(15px);
+  -webkit-backdrop-filter: blur(15px);
+  border-radius: 0 0 12px 0;
+  border-top: 1px solid rgba(0, 217, 255, 0.15);
+  border-left: 1px solid rgba(0, 217, 255, 0.15);
+}
+
+/* Animations */
+@keyframes liquidFlow {
+  0% { transform: translateX(-100%); }
+  100% { transform: translateX(100%); }
+}
+
+@keyframes energyPulse {
+  0% { 
+    opacity: 0.4;
+    transform: translate(-50%, -50%) scale(0.8);
+  }
+  100% { 
+    opacity: 0.8;
+    transform: translate(-50%, -50%) scale(1.2);
+  }
+}
+
+@keyframes rotateGradient {
+  0% { filter: hue-rotate(0deg); }
+  100% { filter: hue-rotate(360deg); }
+}
+
+@keyframes hologramFlicker {
+  0%, 100% { opacity: 0.3; }
+  50% { opacity: 0.5; }
+}
+
+/* Firefox 2026 */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(0, 217, 255, 0.6) rgba(5, 8, 16, 0.9);
+}
+
+/* Responsive Future */
+@media (max-width: 768px) {
+  ::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+  }
+  
+  ::-webkit-scrollbar-track::before {
+    background-size: 15px 15px;
+  }
+}
+
+/* Quantum Particles Effect (Optional) */
+.scrollbar-particles {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 9999;
+}
     </style>
 </head>
 <body class="lang-en">
