Add Google Tag Manager script to index.html

--- a/index.html
+++ b/index.html
@@ -1621,5 +1621,14 @@
             });
         });
     </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-96ZQ78JVTE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-96ZQ78JVTE');
+</script>
 </body>
 </html>
