--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
 
         .hero-title {
             font-family: var(--font-display);
-            font-size: clamp(2.5rem, 8vw, 5.5rem);
+            font-size: 58px;
             font-weight: 900;
             line-height: 1.1;
             letter-spacing: 0.02em;
